# mfin

./: .gitignore  README.md  debug_page.py  extract_tables.py  mfin.spec  requirements-build.txt  requirements.txt  windows_gui.py
docs/plans/: 2026-03-06-pdf-table-extraction.md  2026-03-06-windows-right-click-design.md  2026-03-06-windows-right-click-plan.md
shell_extension/: Cargo.toml
shell_extension/src/: lib.rs
