[package]
name = "mfin_shell"
version = "0.1.0"
edition = "2021"
description = "Windows 11 shell extension for mfin PDF table extractor"

[lib]
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Registry",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
]

[profile.release]
opt-level = "s"
lto = true
strip = true
